--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,6 @@
     ></script>
 
     <!-- Import the page's Javascript to do some stuff -->
-    <script src="/script.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
